k8s/ingress-chart/template/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hasslspace-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway  # использует стандартный ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "hasslspace.example.com"
      # Для HTTPS добавьте этот блок
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      tls:
#        mode: SIMPLE
#        credentialName: hasslspace-tls-secret  # ваш secret с сертификатом
#      hosts:
#        - "hasslspace.example.com"
